better define relationships; make more accessible

--- a/example/Demo_Database_SQL.ipynb
+++ b/example/Demo_Database_SQL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,19 +38,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'ndi.experiment.Experiment'>\n",
+      "<class 'ndi.database.sql.experiments'>\n",
+      "<class 'ndi.daq_system.DaqSystem'>\n",
+      "<class 'ndi.database.sql.daq_systems'>\n",
+      "<class 'ndi.probe.Probe'>\n",
+      "<class 'ndi.database.sql.probes'>\n",
+      "<class 'ndi.epoch.Epoch'>\n",
+      "<class 'ndi.database.sql.epochs'>\n",
+      "<class 'ndi.channel.Channel'>\n",
+      "<class 'ndi.database.sql.channels'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MetaData(bind=None)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for table in db.get_tables():\n",
+    "for table, value in db.get_tables().items():\n",
     "    print(table)\n",
+    "    print(value)\n",
     "    \n",
     "db.Base.metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,18 +112,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adding to experiments:\n",
+      "  a38fc8c... <ndi.database.sql.experiments object at 0x1188ac1f0>\n"
+     ]
+    }
+   ],
    "source": [
     "db.add(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 myExperiment3\n",
+      "1 myExperiment3\n"
+     ]
+    }
+   ],
    "source": [
     "for i, experiment in enumerate(db.find(Experiment)):\n",
     "    print(i, experiment.name)"
@@ -103,11 +149,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 'a38fc8cc86a542ad9d749b715bd009f7', 'name': 'myExperiment3', 'daq_systems': []}\n"
+     ]
+    }
+   ],
    "source": [
     "ndi_query = (\n",
     "    Q('id') == e.id)\\\n",
@@ -121,9 +175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 'a38fc8cc86a542ad9d749b715bd009f7', 'flatbuffer': b'\\x0c\\x00\\x00\\x00\\x08\\x00\\x0c\\x00\\x08\\x00\\x04\\x00\\x08\\x00\\x00\\x00\\x08\\x00\\x00\\x00\\x18\\x00\\x00\\x00\\r\\x00\\x00\\x00myExperiment3\\x00\\x00\\x00 \\x00\\x00\\x00a38fc8cc86a542ad9d749b715bd009f7\\x00\\x00\\x00\\x00', 'name': 'myExperiment3'}\n",
+      "-----\n",
+      "{'id': 'a38fc8cc86a542ad9d749b715bd009f7', 'name': 'myExperiment3', 'daq_systems': []}\n"
+     ]
+    }
+   ],
    "source": [
     "field = db._collections[Experiment].fields\n",
     "filters = and_(\n",
@@ -142,9 +206,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 myExperiment3\n",
+      "1 new_name\n"
+     ]
+    }
+   ],
    "source": [
     "e.name = 'new_name'\n",
     "db.update(e)\n",
@@ -155,9 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 myExperiment3\n"
+     ]
+    }
+   ],
    "source": [
     "db.delete(e)\n",
     "\n",
