--- a/example/Demo_Database_SQL_Pipeline.ipynb
+++ b/example/Demo_Database_SQL_Pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'ndi.database.sql.experiments'>\n",
+      "<class 'ndi.database.sql.daq_systems'>\n",
+      "<class 'ndi.database.sql.probes'>\n",
+      "<class 'ndi.database.sql.epochs'>\n",
+      "<class 'ndi.database.sql.channels'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MetaData(bind=None)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for table in db.get_tables():\n",
+    "for table in db.get_tables().values():\n",
     "    print(table)\n",
     "    \n",
     "db.Base.metadata"
@@ -50,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,18 +106,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adding to experiments:\n",
+      "  bc4aa7f... <ndi.database.sql.experiments object at 0x1192da550>\n",
+      "adding to daq_systems:\n",
+      "  4728a6c... <ndi.database.sql.daq_systems object at 0x1192da0d0>\n",
+      "  2ace004... <ndi.database.sql.daq_systems object at 0x118e59d30>\n",
+      "adding to probes:\n",
+      "  c4e1436... <ndi.database.sql.probes object at 0x1192da5b0>\n",
+      "  c05b21d... <ndi.database.sql.probes object at 0x1192da0d0>\n",
+      "  9a13130... <ndi.database.sql.probes object at 0x119270400>\n",
+      "  91746c4... <ndi.database.sql.probes object at 0x118e59e50>\n",
+      "adding to epochs:\n",
+      "  995e746... <ndi.database.sql.epochs object at 0x1192da0d0>\n",
+      "  5b34313... <ndi.database.sql.epochs object at 0x118e59c70>\n",
+      "  a705cf7... <ndi.database.sql.epochs object at 0x11937c670>\n",
+      "  e79145b... <ndi.database.sql.epochs object at 0x11937c790>\n",
+      "  2ec5662... <ndi.database.sql.epochs object at 0x11937cdc0>\n",
+      "  51e9163... <ndi.database.sql.epochs object at 0x1193997f0>\n",
+      "adding to channels:\n",
+      "  fb81f42... <ndi.database.sql.channels object at 0x119333f70>\n",
+      "  1d88301... <ndi.database.sql.channels object at 0x1192da040>\n",
+      "  f129ba0... <ndi.database.sql.channels object at 0x11937c580>\n",
+      "  ed1248d... <ndi.database.sql.channels object at 0x11937cdc0>\n",
+      "  b406286... <ndi.database.sql.channels object at 0x11937c370>\n",
+      "  85084e4... <ndi.database.sql.channels object at 0x118e59c70>\n"
+     ]
+    }
+   ],
    "source": [
     "db.add_experiment(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<ndi.experiment.Experiment object at 0x119270400>, <ndi.experiment.Experiment object at 0x118e59e50>]\n"
+     ]
+    }
+   ],
    "source": [
     "experiments = db.find(Experiment)\n",
     "print(experiments)"
@@ -103,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +177,7 @@
     "    for header, ndi_class in tables:\n",
     "        items = db.find(ndi_class)\n",
     "\n",
-    "        print(header)\n",
+    "        print(header, '\\n')\n",
     "        for x in items:\n",
     "            print(x)\n",
     "        print('----------')"
@@ -124,18 +185,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiments \n",
+      "\n",
+      "<ndi.experiment.Experiment object at 0x1192da610>\n",
+      "<ndi.experiment.Experiment object at 0x1192da2b0>\n",
+      "----------\n",
+      "DAQ systems \n",
+      "\n",
+      "<ndi.daq_system.DaqSystem object at 0x10ccc7400>\n",
+      "<ndi.daq_system.DaqSystem object at 0x1193b2910>\n",
+      "<ndi.daq_system.DaqSystem object at 0x1193bdd30>\n",
+      "<ndi.daq_system.DaqSystem object at 0x1193bdc70>\n",
+      "----------\n",
+      "Probes \n",
+      "\n",
+      "<ndi.probe.Probe object at 0x1192da610>\n",
+      "<ndi.probe.Probe object at 0x1192daca0>\n",
+      "<ndi.probe.Probe object at 0x10ccc7280>\n",
+      "<ndi.probe.Probe object at 0x1193d0a00>\n",
+      "<ndi.probe.Probe object at 0x1193d0790>\n",
+      "<ndi.probe.Probe object at 0x1193d0a60>\n",
+      "<ndi.probe.Probe object at 0x1193d0c10>\n",
+      "<ndi.probe.Probe object at 0x1193d0eb0>\n",
+      "----------\n",
+      "Epochs \n",
+      "\n",
+      "<ndi.epoch.Epoch object at 0x1193b2850>\n",
+      "<ndi.epoch.Epoch object at 0x1193b26d0>\n",
+      "<ndi.epoch.Epoch object at 0x11937c700>\n",
+      "<ndi.epoch.Epoch object at 0x11937c790>\n",
+      "<ndi.epoch.Epoch object at 0x1192da7f0>\n",
+      "<ndi.epoch.Epoch object at 0x1192dad00>\n",
+      "<ndi.epoch.Epoch object at 0x1192da0d0>\n",
+      "<ndi.epoch.Epoch object at 0x1193d0490>\n",
+      "<ndi.epoch.Epoch object at 0x1193d09d0>\n",
+      "<ndi.epoch.Epoch object at 0x1193d0460>\n",
+      "<ndi.epoch.Epoch object at 0x1193d02b0>\n",
+      "<ndi.epoch.Epoch object at 0x1193d0040>\n",
+      "----------\n",
+      "Channels \n",
+      "\n",
+      "<ndi.channel.Channel object at 0x1193b27f0>\n",
+      "<ndi.channel.Channel object at 0x1193b2670>\n",
+      "<ndi.channel.Channel object at 0x1193b2a30>\n",
+      "<ndi.channel.Channel object at 0x119399c10>\n",
+      "<ndi.channel.Channel object at 0x119399be0>\n",
+      "<ndi.channel.Channel object at 0x119399940>\n",
+      "<ndi.channel.Channel object at 0x119399370>\n",
+      "<ndi.channel.Channel object at 0x1193d2a90>\n",
+      "<ndi.channel.Channel object at 0x1193d2a60>\n",
+      "<ndi.channel.Channel object at 0x1193d2a30>\n",
+      "<ndi.channel.Channel object at 0x1193d2d60>\n",
+      "<ndi.channel.Channel object at 0x1193d2d90>\n",
+      "----------\n"
+     ]
+    }
+   ],
    "source": [
     "show_all_in_tables()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DELETING: [<ndi.experiment.Experiment object at 0x119270400>, <ndi.experiment.Experiment object at 0x118e59e50>]\n"
+     ]
+    }
+   ],
    "source": [
     "print('DELETING:', experiments)\n",
     "db.delete(experiments)"
@@ -143,11 +272,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiments \n",
+      "\n",
+      "----------\n",
+      "DAQ systems \n",
+      "\n",
+      "----------\n",
+      "Probes \n",
+      "\n",
+      "----------\n",
+      "Epochs \n",
+      "\n",
+      "----------\n",
+      "Channels \n",
+      "\n",
+      "----------\n"
+     ]
+    }
+   ],
+   "source": [
+    "show_all_in_tables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adding to experiments:\n",
+      "  bc4aa7f... <ndi.database.sql.experiments object at 0x119416c40>\n",
+      "adding to daq_systems:\n",
+      "  4728a6c... <ndi.database.sql.daq_systems object at 0x1193d0160>\n",
+      "  2ace004... <ndi.database.sql.daq_systems object at 0x119416fa0>\n",
+      "adding to probes:\n",
+      "  c4e1436... <ndi.database.sql.probes object at 0x1193d2cd0>\n",
+      "  c05b21d... <ndi.database.sql.probes object at 0x1193d2e20>\n",
+      "  9a13130... <ndi.database.sql.probes object at 0x1193d2e80>\n",
+      "  91746c4... <ndi.database.sql.probes object at 0x1193d2d60>\n",
+      "adding to epochs:\n",
+      "  995e746... <ndi.database.sql.epochs object at 0x1193d2e20>\n",
+      "  5b34313... <ndi.database.sql.epochs object at 0x1193d2d90>\n",
+      "  a705cf7... <ndi.database.sql.epochs object at 0x1193b2910>\n",
+      "  e79145b... <ndi.database.sql.epochs object at 0x1194061f0>\n",
+      "  2ec5662... <ndi.database.sql.epochs object at 0x1194064c0>\n",
+      "  51e9163... <ndi.database.sql.epochs object at 0x119406550>\n",
+      "adding to channels:\n",
+      "  fb81f42... <ndi.database.sql.channels object at 0x119416c70>\n",
+      "  1d88301... <ndi.database.sql.channels object at 0x1193d2ca0>\n",
+      "  f129ba0... <ndi.database.sql.channels object at 0x1193d2d60>\n",
+      "  ed1248d... <ndi.database.sql.channels object at 0x1193d2e80>\n",
+      "  b406286... <ndi.database.sql.channels object at 0x1194061f0>\n",
+      "  85084e4... <ndi.database.sql.channels object at 0x1194064c0>\n",
+      "\n",
+      "**DELETE PROBES**\n",
+      "\n",
+      "Experiments \n",
+      "\n",
+      "<ndi.experiment.Experiment object at 0x1194069a0>\n",
+      "----------\n",
+      "DAQ systems \n",
+      "\n",
+      "<ndi.daq_system.DaqSystem object at 0x119406d90>\n",
+      "<ndi.daq_system.DaqSystem object at 0x119406610>\n",
+      "----------\n",
+      "Probes \n",
+      "\n",
+      "----------\n",
+      "Epochs \n",
+      "\n",
+      "<ndi.epoch.Epoch object at 0x11941cc10>\n",
+      "<ndi.epoch.Epoch object at 0x11941ca90>\n",
+      "<ndi.epoch.Epoch object at 0x11941c7c0>\n",
+      "<ndi.epoch.Epoch object at 0x11941cbe0>\n",
+      "<ndi.epoch.Epoch object at 0x11941c4c0>\n",
+      "<ndi.epoch.Epoch object at 0x11941c490>\n",
+      "----------\n",
+      "Channels \n",
+      "\n",
+      "----------\n"
+     ]
+    }
+   ],
+   "source": [
+    "db.add_experiment(e)\n",
+    "print('\\n**DELETE PROBES**\\n')\n",
+    "db.delete(db.find(Probe))\n",
+    "show_all_in_tables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adding to experiments:\n",
+      "  bc4aa7f... <ndi.database.sql.experiments object at 0x1193f7820>\n",
+      "adding to daq_systems:\n",
+      "  4728a6c... <ndi.database.sql.daq_systems object at 0x11941c370>\n",
+      "  2ace004... <ndi.database.sql.daq_systems object at 0x11941c9a0>\n",
+      "adding to probes:\n",
+      "  c4e1436... <ndi.database.sql.probes object at 0x11941c2b0>\n",
+      "  c05b21d... <ndi.database.sql.probes object at 0x11941c850>\n",
+      "  9a13130... <ndi.database.sql.probes object at 0x11941c160>\n",
+      "  91746c4... <ndi.database.sql.probes object at 0x11941c910>\n",
+      "adding to epochs:\n",
+      "  995e746... <ndi.database.sql.epochs object at 0x1193d07c0>\n",
+      "  5b34313... <ndi.database.sql.epochs object at 0x11941c9a0>\n",
+      "  a705cf7... <ndi.database.sql.epochs object at 0x11941c160>\n",
+      "  e79145b... <ndi.database.sql.epochs object at 0x11941c8e0>\n",
+      "  2ec5662... <ndi.database.sql.epochs object at 0x1194067f0>\n",
+      "  51e9163... <ndi.database.sql.epochs object at 0x119406340>\n",
+      "adding to channels:\n",
+      "  fb81f42... <ndi.database.sql.channels object at 0x1193d0af0>\n",
+      "  1d88301... <ndi.database.sql.channels object at 0x11941c9a0>\n",
+      "  f129ba0... <ndi.database.sql.channels object at 0x11941c160>\n",
+      "  ed1248d... <ndi.database.sql.channels object at 0x11941c370>\n",
+      "  b406286... <ndi.database.sql.channels object at 0x11941c910>\n",
+      "  85084e4... <ndi.database.sql.channels object at 0x11941cd00>\n"
+     ]
+    }
+   ],
+   "source": [
+    "db.delete(db.find(Experiment))\n",
+    "db.add_experiment(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_all_in_tables()"
+    "# e2 = db.find(Experiment, as_sql_data=True)[0]\n",
+    "# print(e2)\n",
+    "# e2.daq_systems"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{<class 'ndi.daq_system.DaqSystem'>: 'daq_systems'} \n",
+      "\n",
+      "\n",
+      "[<ndi.database.sql.daq_systems object at 0x119421610>, <ndi.database.sql.daq_systems object at 0x119421640>]\n",
+      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x1193b2850>, 'flatbuffer': b'\\x0c\\x00\\x00\\x00\\x08\\x00\\x0c\\x00\\x08\\x00\\x04\\x00\\x08\\x00\\x00\\x00\\x08\\x00\\x00\\x00\\x18\\x00\\x00\\x00\\r\\x00\\x00\\x00myExperiment3\\x00\\x00\\x00 \\x00\\x00\\x00bc4aa7f1275c4a879d26da85c0fc9f75\\x00\\x00\\x00\\x00', 'id': 'bc4aa7f1275c4a879d26da85c0fc9f75', 'name': 'myExperiment3'}\n",
+      "<ndi.database.sql.daq_systems object at 0x119421c10> \n",
+      "\n",
+      "<ndi.database.sql.daq_systems object at 0x1194218b0> \n",
+      "\n",
+      "<class 'sqlalchemy.orm.collections.InstrumentedList'> \n",
+      "\n",
+      "[<ndi.database.sql.probes object at 0x119421910>, <ndi.database.sql.probes object at 0x119421130>] \n",
+      "\n",
+      "<class 'sqlalchemy.orm.collections.InstrumentedList'> \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds_col = db._collections[DaqSystem]\n",
+    "e_col = db._collections[Experiment]\n",
+    "p = lambda x: print(x, '\\n')\n",
+    "\n",
+    "with db._sqla_open_session() as session:\n",
+    "    \n",
+    "    relations = e_col.relationship_keys\n",
+    "    p(relations)\n",
+    "    print('')\n",
+    "    \n",
+    "    for key in relations.values():\n",
+    "        dependants = getattr(e, key)\n",
+    "        print(dependants)\n",
+    "    \n",
+    "    results = session.query(e_col.table).join(e_col.table.daq_systems).all()\n",
+    "    e = results[0]\n",
+    "    print(e.__dict__)\n",
+    "\n",
+    "    \n",
+    "#     p(type(e['daq_systems']))\n",
+    "    ds1, ds2 = getattr(e, 'daq_systems')\n",
+    "    p(ds1)\n",
+    "    p(ds2)\n",
+    "    p(type(e.daq_systems))\n",
+    "    p(ds2.probes)\n",
+    "    p(type(ds2.probes))"
    ]
   },
   {
@@ -156,11 +485,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.add_experiment(e)\n",
-    "print('\\n**DELETE PROBES**\\n')\n",
-    "db.delete(db.find(Probe))\n",
-    "show_all_in_tables()"
+    "\n",
+    "# from sqlalchemy object get dependents\n",
+    "def show_dependants(sqla_obj, tbl, relations):\n",
+    "    pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
