fill out query mappings

--- a/example/Demo_Database_SQL.ipynb
+++ b/example/Demo_Database_SQL.ipynb
@@ -120,7 +120,7 @@
      "output_type": "stream",
      "text": [
       "adding to experiments:\n",
-      "  a38fc8c... <ndi.database.sql.experiments object at 0x1188ac1f0>\n"
+      "  afaf4f2... <ndi.database.sql.experiments object at 0x116845fa0>\n"
      ]
     }
    ],
@@ -158,16 +158,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': 'a38fc8cc86a542ad9d749b715bd009f7', 'name': 'myExperiment3', 'daq_systems': []}\n"
+      "{'id': 'afaf4f2d1b894d09bf535800c8fd2972', 'name': 'myExperiment3', 'daq_systems': []}\n"
      ]
     }
    ],
    "source": [
     "ndi_query = (\n",
     "    Q('id') == e.id)\\\n",
-    "    & ( (Q('name') == 'notMine')\\\n",
-    "      | (Q('name') == 'nope too')\\\n",
-    "      | (Q('name') == 'myExperiment3') )\n",
+    "    & ( (Q('name') != 'something ridiculous')\\\n",
+    "      | (Q('name').in_(['myExperiment3', '3', 'other']))\\\n",
+    "      | (Q('name').contains('Experiment33')) )\n",
     "\n",
     "for obj in db.find(Experiment, query=ndi_query):\n",
     "    print(obj.__dict__)"
@@ -182,9 +182,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': 'a38fc8cc86a542ad9d749b715bd009f7', 'flatbuffer': b'\\x0c\\x00\\x00\\x00\\x08\\x00\\x0c\\x00\\x08\\x00\\x04\\x00\\x08\\x00\\x00\\x00\\x08\\x00\\x00\\x00\\x18\\x00\\x00\\x00\\r\\x00\\x00\\x00myExperiment3\\x00\\x00\\x00 \\x00\\x00\\x00a38fc8cc86a542ad9d749b715bd009f7\\x00\\x00\\x00\\x00', 'name': 'myExperiment3'}\n",
+      "{'id': 'afaf4f2d1b894d09bf535800c8fd2972', 'flatbuffer': b'\\x0c\\x00\\x00\\x00\\x08\\x00\\x0c\\x00\\x08\\x00\\x04\\x00\\x08\\x00\\x00\\x00\\x08\\x00\\x00\\x00\\x18\\x00\\x00\\x00\\r\\x00\\x00\\x00myExperiment3\\x00\\x00\\x00 \\x00\\x00\\x00afaf4f2d1b894d09bf535800c8fd2972\\x00\\x00\\x00\\x00', 'name': 'myExperiment3'}\n",
       "-----\n",
-      "{'id': 'a38fc8cc86a542ad9d749b715bd009f7', 'name': 'myExperiment3', 'daq_systems': []}\n"
+      "{'id': 'afaf4f2d1b894d09bf535800c8fd2972', 'name': 'myExperiment3', 'daq_systems': []}\n"
      ]
     }
    ],
@@ -213,8 +213,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 myExperiment3\n",
-      "1 new_name\n"
+      "0 new_name\n",
+      "1 myExperiment3\n"
      ]
     }
    ],
