finish crud methods

--- a/example/Demo_Database_SQL.ipynb
+++ b/example/Demo_Database_SQL.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -46,15 +46,25 @@
      "output_type": "stream",
      "text": [
       "<class 'ndi.experiment.Experiment'>\n",
+      "Experiment\n",
       "<class 'ndi.database.sql.experiments'>\n",
+      "experiments\n",
       "<class 'ndi.daq_system.DaqSystem'>\n",
+      "DaqSystem\n",
       "<class 'ndi.database.sql.daq_systems'>\n",
+      "daq_systems\n",
       "<class 'ndi.probe.Probe'>\n",
+      "Probe\n",
       "<class 'ndi.database.sql.probes'>\n",
+      "probes\n",
       "<class 'ndi.epoch.Epoch'>\n",
+      "Epoch\n",
       "<class 'ndi.database.sql.epochs'>\n",
+      "epochs\n",
       "<class 'ndi.channel.Channel'>\n",
-      "<class 'ndi.database.sql.channels'>\n"
+      "Channel\n",
+      "<class 'ndi.database.sql.channels'>\n",
+      "channels\n"
      ]
     },
     {
@@ -63,7 +73,7 @@
        "MetaData(bind=None)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,9 +81,9 @@
    "source": [
     "for table, value in db.get_tables().items():\n",
     "    print(table)\n",
+    "    print(table.__name__)\n",
     "    print(value)\n",
-    "    \n",
-    "db.Base.metadata"
+    "    print(value.__name__)"
    ]
   },
   {
