--- a/example/Demo_Query_FileSystem.ipynb
+++ b/example/Demo_Query_FileSystem.ipynb
@@ -89,11 +89,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probe5\n",
-      "Probe9\n",
-      "Probe8\n",
       "Probe6\n",
-      "Probe7\n"
+      "Probe5\n",
+      "Probe8\n",
+      "Probe7\n",
+      "Probe9\n"
      ]
     }
    ],
@@ -133,12 +133,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probe5\n",
-      "Probe9\n",
-      "Probe1\n",
-      "Probe8\n",
       "Probe6\n",
-      "Probe2\n"
+      "Probe5\n",
+      "Probe8\n",
+      "Probe2\n",
+      "Probe1\n",
+      "Probe9\n"
      ]
     }
    ],
@@ -157,10 +157,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Probe6\n",
       "Probe5\n",
-      "Probe9\n",
       "Probe8\n",
-      "Probe6\n"
+      "Probe9\n"
      ]
     }
    ],
@@ -181,14 +181,14 @@
      "output_type": "stream",
      "text": [
       "fiodjwfodw\n",
-      "fiodjwfodw\n",
-      "Probe4\n",
       "Probe3\n",
-      "Probe1\n",
+      "Probe4\n",
       "fiodjwfodw\n",
       "fiodjwfodw\n",
       "Probe7\n",
-      "Probe2\n"
+      "Probe2\n",
+      "Probe1\n",
+      "fiodjwfodw\n"
      ]
     }
    ],
@@ -212,8 +212,8 @@
      "output_type": "stream",
      "text": [
       "Probe3\n",
-      "Probe1\n",
-      "Probe2\n"
+      "Probe2\n",
+      "Probe1\n"
      ]
     }
    ],
@@ -232,29 +232,6 @@
    "outputs": [],
    "source": [
     "db.drop_collection(Probe)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "<class 'ndi.probe.Probe'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-ee03382e1da7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mProbe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Desktop/Squishymedia-Brandeis/ndi-python/ndi/database/file_system.py\u001b[0m in \u001b[0;36mfind\u001b[0;34m(self, ndi_class, query)\u001b[0m\n\u001b[1;32m    128\u001b[0m         \u001b[0;34m:\u001b[0m\u001b[0mrtype\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mterm\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0mNDI\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    129\u001b[0m         \"\"\"\n\u001b[0;32m--> 130\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_collections\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mndi_class\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    131\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    132\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mupdate_many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mndi_class\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpayload\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: <class 'ndi.probe.Probe'>"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "db.find(Probe)"
    ]
   },
   {
