write SQL method docs

--- a/example/Demo_Database_SQL.ipynb
+++ b/example/Demo_Database_SQL.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,16 +66,6 @@
       "<class 'ndi.database.sql.channels'>\n",
       "channels\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "MetaData(bind=None)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -124,16 +114,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "adding to experiments:\n",
-      "  afaf4f2... <ndi.database.sql.experiments object at 0x116845fa0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.add(e)"
    ]
@@ -168,7 +149,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': 'afaf4f2d1b894d09bf535800c8fd2972', 'name': 'myExperiment3', 'daq_systems': []}\n"
+      "{'id': '34c17a4b0dd1430b9faa800ee7ee4750', 'name': 'myExperiment3', 'daq_systems': []}\n"
      ]
     }
    ],
@@ -192,9 +173,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': 'afaf4f2d1b894d09bf535800c8fd2972', 'flatbuffer': b'\\x0c\\x00\\x00\\x00\\x08\\x00\\x0c\\x00\\x08\\x00\\x04\\x00\\x08\\x00\\x00\\x00\\x08\\x00\\x00\\x00\\x18\\x00\\x00\\x00\\r\\x00\\x00\\x00myExperiment3\\x00\\x00\\x00 \\x00\\x00\\x00afaf4f2d1b894d09bf535800c8fd2972\\x00\\x00\\x00\\x00', 'name': 'myExperiment3'}\n",
+      "{'id': '34c17a4b0dd1430b9faa800ee7ee4750', 'flatbuffer': b'\\x0c\\x00\\x00\\x00\\x08\\x00\\x0c\\x00\\x08\\x00\\x04\\x00\\x08\\x00\\x00\\x00\\x08\\x00\\x00\\x00\\x18\\x00\\x00\\x00\\r\\x00\\x00\\x00myExperiment3\\x00\\x00\\x00 \\x00\\x00\\x0034c17a4b0dd1430b9faa800ee7ee4750\\x00\\x00\\x00\\x00', 'name': 'myExperiment3'}\n",
       "-----\n",
-      "{'id': 'afaf4f2d1b894d09bf535800c8fd2972', 'name': 'myExperiment3', 'daq_systems': []}\n"
+      "{'id': '34c17a4b0dd1430b9faa800ee7ee4750', 'name': 'myExperiment3', 'daq_systems': []}\n"
      ]
     }
    ],
@@ -223,8 +204,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 new_name\n",
-      "1 myExperiment3\n"
+      "0 myExperiment3\n",
+      "1 new_name\n"
      ]
     }
    ],
@@ -258,10 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'sqlalchemy.orm.session.Session'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "with db._sqla_open_session() as session:\n",
+    "    print(type(session))"
+   ]
   },
   {
    "cell_type": "code",
